--- a/Home_Sales_code_colab.ipynb
+++ b/Home_Sales_code_colab.ipynb
@@ -2,35 +2,41 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "f636fff9-816a-49f5-bd72-22eea2f22b64"
+        "outputId": "ef31a5d0-d1e3-4d2a-a115-0bc725d3ba4e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Get:3 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
-            "Hit:4 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Hit:5 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:6 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:7 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
-            "Hit:10 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Fetched 229 kB in 32s (7,247 B/s)\n",
+            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+            "\r0% [Waiting for headers] [1 InRelease 12.7 kB/110 kB 12%] [Connected to cloud.r\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "\r0% [Waiting for headers] [1 InRelease 25.8 kB/110 kB 23%] [Connected to cloud.r\r                                                                               \rGet:3 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
+            "\r0% [3 InRelease 12.7 kB/119 kB 11%] [1 InRelease 31.5 kB/110 kB 29%] [Waiting f\r                                                                               \rGet:4 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
+            "\r0% [3 InRelease 21.4 kB/119 kB 18%] [1 InRelease 66.3 kB/110 kB 60%] [4 InRelea\r0% [3 InRelease 24.3 kB/119 kB 20%] [1 InRelease 69.2 kB/110 kB 63%] [Connectin\r                                                                               \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [109 kB]\n",
+            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [1,283 kB]\n",
+            "Get:9 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease [18.1 kB]\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,260 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu jammy-backports/main amd64 Packages [50.4 kB]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [28.1 kB]\n",
+            "Hit:13 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
+            "Hit:14 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Get:15 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 Packages [21.8 kB]\n",
+            "Fetched 3,003 kB in 2s (1,270 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
       ],
       "source": [
+        "\n",
         "import os\n",
         "# Find the latest version of spark 3.x  from http://www.apache.org/dist/spark/ and enter as the spark version\n",
         "# For example:\n",
@@ -56,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 2,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -72,13 +78,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 3,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c98e8751-e1aa-440d-e0b0-555266237524"
+        "outputId": "65c8e96a-8199-4f92-efd7-80c7b4cdd772"
       },
       "outputs": [
         {
@@ -126,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 4,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -138,13 +144,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 5,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "112c06a7-6868-447d-f26b-137e585ae39b"
+        "outputId": "f51305ba-acda-4ca6-fce5-5ab079047c21"
       },
       "outputs": [
         {
@@ -177,13 +183,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 6,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8391013-f9da-4341-9bb2-6e43eb15f28b"
+        "outputId": "d971bb62-030f-419a-8ca0-0f14cc0eb33f"
       },
       "outputs": [
         {
@@ -220,13 +226,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 18,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a4d29b3-a232-44dc-8c27-e13755232da4"
+        "outputId": "452716f0-858c-4018-9bac-f668bf455e5f"
       },
       "outputs": [
         {
@@ -264,13 +270,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "1023edcc-413d-4cc5-ba33-e2d2743a9736"
+        "outputId": "019e170c-953f-4b3e-c680-745616090bd3"
       },
       "outputs": [
         {
@@ -303,7 +309,7 @@
             "+----+---------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.601581335067749 seconds ---\n"
+            "--- 0.6964857578277588 seconds ---\n"
           ]
         }
       ],
@@ -327,13 +333,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 20,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "abb4f0b6-0e13-4cac-e092-4a9dcb0631b6"
+        "outputId": "1f88f471-4523-42a6-8f96-16cd8d007630"
       },
       "outputs": [
         {
@@ -344,7 +350,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 20
         }
       ],
       "source": [
@@ -354,13 +360,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 21,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aed7df16-cb14-4b0d-dc9d-61bf950d616b"
+        "outputId": "51690cf4-4efd-4e7c-e18a-4c72fa1d2949"
       },
       "outputs": [
         {
@@ -371,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 21
         }
       ],
       "source": [
@@ -381,13 +387,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "4ddc7c1f-fd79-48bc-9377-55755c7f5e5f"
+        "outputId": "c5aea6ab-dbbb-41d5-a25f-4fb574b47252"
       },
       "outputs": [
         {
@@ -420,7 +426,7 @@
             "+----+---------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.5948324203491211 seconds ---\n"
+            "--- 0.4450709819793701 seconds ---\n"
           ]
         }
       ],
@@ -437,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 23,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -449,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 24,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -461,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 25,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -473,13 +479,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "0ae87bc1-b219-461b-aa16-34196304e54b"
+        "outputId": "129484d1-6985-4838-822d-aa09cbfaefb4"
       },
       "outputs": [
         {
@@ -512,7 +518,7 @@
             "+----+---------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.5130002498626709 seconds ---\n"
+            "--- 0.48825621604919434 seconds ---\n"
           ]
         }
       ],
@@ -530,13 +536,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 16,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "31837023-eb37-4a88-9d61-0e3c3aa34345"
+        "outputId": "6c4cccd7-d146-4c46-a9d3-fdb05f505857"
       },
       "outputs": [
         {
@@ -547,7 +553,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 16
         }
       ],
       "source": [
@@ -557,13 +563,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 17,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2f60ac6f-8ecb-419a-d2b2-3b7349053535"
+        "outputId": "5cf09cc3-4ce8-4412-9979-17fb9010a732"
       },
       "outputs": [
         {
@@ -574,13 +580,28 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 17
         }
       ],
       "source": [
         "# 15. Check if the home_sales is no longer cached\n",
         "spark.catalog.isCached('home_sales')\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Compare Run Times on Query 4 (q4)\n",
+        "\n",
+        "* Uncache Runtime: 0.6964857578277588 seconds\n",
+        "\n",
+        "* Cached Runtime: 0.4450709819793701 seconds\n",
+        "\n",
+        "* Runtime with the parquet DataFrame: 0.48825621604919434 seconds"
+      ],
+      "metadata": {
+        "id": "LqVc_U6cYqNJ"
+      }
     }
   ],
   "metadata": {
